[gd_scene load_steps=5 format=2]

[ext_resource path="res://Tower/Tower.gd" type="Script" id=1]
[ext_resource path="res://media/towerDefense_tilesheet.png" type="Texture" id=2]
[ext_resource path="res://effects/Tags.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 30, 21.2798 )

[node name="Tower" type="KinematicBody2D" index="0"]

input_pickable = true
collision_layer = 16
collision_mask = 0
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Material", "Pickable", "Visibility", "collision" ]
gun_cooldown = 1.0
detect_radius = 500
cost = 50
turret_speed = 100.0

[node name="Body" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 131.75, 1226.82, 55.75, 42.5 )
_sections_unfolded = [ "Region" ]

[node name="GunCooldown" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="DetectRadius" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2
collision_mask = 4
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius" index="0"]

position = Vector2( 0.592804, 0.944496 )
scale = Vector2( 0.953601, 0.951571 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="3"]

position = Vector2( -0.69931, -0.874126 )
shape = SubResource( 1 )

[node name="Tags" parent="." index="4" instance=ExtResource( 3 )]

[connection signal="input_event" from="." to="." method="_on_Tower_input_event"]

[connection signal="timeout" from="GunCooldown" to="." method="_on_GunCooldown_timeout"]

[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]

[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_exited"]


